--- a/AppControl Manager/AppControl Manager.csproj
+++ b/AppControl Manager/AppControl Manager.csproj
@@ -109,14 +109,13 @@
 		<NuGetAudit>false</NuGetAudit>
 		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
-		<!--
+        <!--
              https://learn.microsoft.com/visualstudio/code-quality/disable-code-analysis
              This project utilizes extensive and comprehensive analyzers that can take a lot of time to complete.
              So we disable them for debug/design time and only run them during release configuration.
+		-->
 
         <RunAnalyzers>false</RunAnalyzers>
-
--->
 
 	</PropertyGroup>
 
@@ -241,6 +240,7 @@
 		<PackageReference Include="Microsoft.WindowsAppSDK.Widgets" Version="1.8.250904007" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.WinUI" Version="1.8.251105000" />
         <PackageReference Include="Microsoft.WindowsAppSDK.ML" Version="1.8.2109" />
+        <PackageReference Include="System.Numerics.Tensors" Version="10.0.1" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools.MSIX" Version="1.7.20250829.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
