Harden System Security v1.0.34.0
# What's New

## Harden System Security

* Updated the dependencies to the latest versions.

* Added a new security measure to the Miscellaneous Category: Configure the Antimalware Scan Interface (AMSI) to strictly enforce Authenticode code signing requirements for all third-party antimalware providers: https://learn.microsoft.com/windows/win32/api/amsi/nn-amsi-iantimalwareprovider#remarks

* In the Group Policy Editor page, the columns now dynamically resize when you perform search, improving the user experience.

* Minor performance improvements.

## AppControl Manager

* Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios.

--- a/Harden System Security/Resources/MiscellaneousConfigurations.json
+++ b/Harden System Security/Resources/MiscellaneousConfigurations.json
@@ -649,5 +649,30 @@
             5
         ],
         "ID": "019b0786-b318-7ee2-88a0-bdfafe8a0261"
+    },
+    {
+        "Source": 1,
+        "KeyName": "SOFTWARE\\Microsoft\\AMSI",
+        "ValueName": "FeatureBits",
+        "Type": 4,
+        "Size": 4,
+        "Data": "AgAAAA==",
+        "RegValue": "2",
+        "Hive": 0,
+        "PolicyAction": 0,
+        "FriendlyName": "AMSIFeatureBits-Miscellaneous",
+        "URL": "https://learn.microsoft.com/windows/win32/api/amsi/nn-amsi-iantimalwareprovider#remarks",
+        "Category": 12,
+        "SubCategory": null,
+        "DefaultRegValue": "1",
+        "DeviceIntents": [
+            0,
+            1,
+            2,
+            3,
+            4,
+            5
+        ],
+        "ID": "019b4f4e-256f-73e9-8015-45896cac9a0a"
     }
 ]
