--- a/Harden System Security/Resources/WindowsUpdateConfigurations.json
+++ b/Harden System Security/Resources/WindowsUpdateConfigurations.json
@@ -326,13 +326,13 @@
     {
         "Source": 0,
         "KeyName": "Software\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU",
-        "ValueName": "**del.ScheduledInstallEveryWeek",
-        "Type": 1,
+        "ValueName": "ScheduledInstallEveryWeek",
+        "Type": 4,
         "Size": 4,
         "Data": "IAAAAA==",
         "RegValue": " ",
         "Hive": 0,
-        "PolicyAction": 0,
+        "PolicyAction": 1,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstalleveryweek",
         "Category": 13,
@@ -346,13 +346,13 @@
     {
         "Source": 0,
         "KeyName": "Software\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU",
-        "ValueName": "**del.ScheduledInstallFirstWeek",
-        "Type": 1,
+        "ValueName": "ScheduledInstallFirstWeek",
+        "Type": 4,
         "Size": 4,
         "Data": "IAAAAA==",
         "RegValue": " ",
         "Hive": 0,
-        "PolicyAction": 0,
+        "PolicyAction": 1,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallfirstweek",
         "Category": 13,
@@ -366,13 +366,13 @@
     {
         "Source": 0,
         "KeyName": "Software\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU",
-        "ValueName": "**del.ScheduledInstallSecondWeek",
-        "Type": 1,
+        "ValueName": "ScheduledInstallSecondWeek",
+        "Type": 4,
         "Size": 4,
         "Data": "IAAAAA==",
         "RegValue": " ",
         "Hive": 0,
-        "PolicyAction": 0,
+        "PolicyAction": 1,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallsecondweek",
         "Category": 13,
@@ -386,13 +386,13 @@
     {
         "Source": 0,
         "KeyName": "Software\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU",
-        "ValueName": "**del.ScheduledInstallThirdWeek",
-        "Type": 1,
+        "ValueName": "ScheduledInstallThirdWeek",
+        "Type": 4,
         "Size": 4,
         "Data": "IAAAAA==",
         "RegValue": " ",
         "Hive": 0,
-        "PolicyAction": 0,
+        "PolicyAction": 1,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallthirdweek",
         "Category": 13,
@@ -406,13 +406,13 @@
     {
         "Source": 0,
         "KeyName": "Software\\Policies\\Microsoft\\Windows\\WindowsUpdate\\AU",
-        "ValueName": "**del.ScheduledInstallFourthWeek",
-        "Type": 1,
+        "ValueName": "ScheduledInstallFourthWeek",
+        "Type": 4,
         "Size": 4,
         "Data": "IAAAAA==",
         "RegValue": " ",
         "Hive": 0,
-        "PolicyAction": 0,
+        "PolicyAction": 1,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallfourthweek",
         "Category": 13,
