chore: change Dependabot timezone to Sudan

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,7 +23,7 @@ updates:
     schedule:
       interval: "daily"
       time: "07:30"
-      timezone: "Israel"
+      timezone: "Africa/Khartoum"
     labels:
       - "Dependabot ✨"
   - package-ecosystem: "github-actions"
@@ -39,4 +39,4 @@ updates:
     schedule:
       interval: "daily"
       time: "07:30"
-      timezone: "Israel"
+      timezone: "Africa/Khartoum"
