--- a/.github/workflows/Build AppControl Manager for Store.yml
+++ b/.github/workflows/Build AppControl Manager for Store.yml
@@ -700,8 +700,21 @@ jobs:
           }
 
           # For GitHub workflow 1
-          Build_ACM -IsNonStore $false -DownloadRepo $false -InstallDeps $true -Workflow $true -UpdateWorkLoads $false -Upload $true
+          Build_ACM -IsNonStore $false -DownloadRepo $false -InstallDeps $true -Workflow $true -UpdateWorkLoads $false -Upload $false
           # For GitHub workflow 2
           # Build_ACM -IsNonStore $true -DownloadRepo $false -InstallDeps $true -Workflow $true -UpdateWorkLoads $false -Upload $false
           # Local Test - ARM64 + X64
           # Build_ACM -IsNonStore $true -DownloadRepo $false -InstallDeps $false -Workflow $false -UpdateWorkLoads $false -Upload $false
+
+      - name: Configure Microsoft Store CLI 
+        uses: microsoft/microsoft-store-apppublisher@v1.1 
+
+      - name: Reconfigure store credentials 
+        run: msstore reconfigure ` 
+                      --tenantId ${{ secrets.PARTNERCENTER_TENANTID }} ` 
+                      --sellerId ${{ secrets.PARTNERCENTER_SELLERID }} ` 
+                      --clientId ${{ secrets.PARTNERCENTER_CLIENTID }} ` 
+                      --clientSecret ${{ secrets.PARTNERCENTER_CLIENTSECRET }} 
+
+      - name: Publish App package 
+        run: msstore publish '${{ env.MSIXBundle_PATH }}' -id 9PNG1JDDTGP8
